#pragma once

class Vehicle
{
public:
    virtual void print() = 0;
};