@startuml exercise

class vehicle{
    +print()
}

class car{ 
    -wheel:Wheel(4)
    +print()
}

class bike{
    +print()
}

class wheel{
    -radius:double
    -rpm:double
    -angle:double
    -pressure:double
    +Wheel(radius:double)
    +setRpm(r:double):bool
    +getRpm():double
    +setAngle(a:double):bool
    +getAngle():double
    +getRadius():double
}

class pump{
    +setPressure(w:Wheel,p:double):double
}

vehicle <|-- car
vehicle <|-- bike
car o-- wheel
wheel <-- pump

@enduml
